# nano_compiler

./: .gitlab-ci.yml  README.md  appveyor.yml
.github/workflows/: build_installer.yml  build_windows.yml
installer/: nano_compiler_setup.iss
nanoC++/: CMakeLists.txt
nanoC++/resources/: nanoC++.qrc
nanoC++/resources/styles/: default.qss
nanoC++/resources/templates/: hello_world.c  hello_world.cpp
nanoC++/src/: main.cpp  main_window.cpp  main_window.h
nanoC++/src/compiler/: compile_task.cpp  compile_task.h  tcc_wrapper.cpp  tcc_wrapper.h
nanoC++/src/editor/: code_editor.cpp  code_editor.h  code_folding.cpp  code_folding.h  syntax_highlighter.cpp  syntax_highlighter.h  tab_widget.cpp  tab_widget.h
nanoC++/src/ui/: output_panel.cpp  output_panel.h  project_panel.cpp  project_panel.h  toolbar.cpp  toolbar.h
nanoC++/src/utils/: file_utils.cpp  file_utils.h
nanoPython/: CMakeLists.txt
nanoPython/resources/: nanoPython.qrc
nanoPython/resources/styles/: default.qss
nanoPython/resources/templates/: calculator.py  hello_world.py
nanoPython/src/: main.cpp  main_window.cpp  main_window.h
nanoPython/src/editor/: code_editor.cpp  code_editor.h  code_folding.cpp  code_folding.h  syntax_highlighter.cpp  syntax_highlighter.h  tab_widget.h
nanoPython/src/interpreter/: mp_wrapper.cpp  mp_wrapper.h  run_task.cpp  run_task.h
nanoPython/src/ui/: output_panel.cpp  output_panel.h  project_panel.cpp  project_panel.h  repl_panel.cpp  repl_panel.h  splash_dialog.cpp  splash_dialog.h  toolbar.cpp  toolbar.h
nanoPython/src/utils/: file_utils.cpp  file_utils.h
output/: nanoC++  nanoPython
scripts/: build_installer.bat  build_installer.sh  build_macos.sh  download_compilers.bat  download_compilers.sh  setup_dev_env.bat  setup_dev_env.sh
